# ded

./: .gitignore  CMakeLists.txt
shaders/: simple_epic.frag
src/: arena.h  common.c  common.h  editor.c  editor.h  file_browser.c  file_browser.h  free_glyph.c  free_glyph.h  la.c  la.h  lexer.c  lexer.h  main.c  minirent.h  simple_renderer.c  simple_renderer.h  sv.h
